--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -17,6 +21,7 @@
     "@types/react": "17.0.36",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "typescript": "4.5.2",
+    "@types/react-slick": "^0.23.7"
   }
 }
