--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
+    "@types/react-slick": "^0.23.7",
+    "@types/styled-components": "^5.1.19",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2",
-    "@types/react-slick": "^0.23.7"
+    "typescript": "4.5.2"
   }
 }
